c4prj1_deck/grade.txt
Grading at Tue Sep 29 22:33:07 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:18:16: error: ‘ans’ is used uninitialized in this function [-Werror=uninitialized]
   ans -> value = 0;
                ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
